fix jump location for sticky headings

--- a/stylesheets/article.css
+++ b/stylesheets/article.css
@@ -1,3 +1,8 @@
+:root {
+  --sticky-heading-offset: calc(var(--navbar-height) + var(--toolbar-height));
+  --sticky-heading-offset-fix: calc(var(--sticky-heading-offset) - 0.05rem); /* compensates for alignment error in Chrome & Edge */
+}
+
 .doc {
   box-sizing: border-box;
   color: var(--color-gray20);
@@ -196,22 +201,22 @@
 
 .doc h2 {
   position: sticky;
-  top: var(--toolbar-height);
+  top: 0;
   border-bottom: 1px solid var(--color-cerulean);
   margin: 0 -1rem 0.9rem -1rem;
   z-index: 2;
 
   /* method A: padding top with a partial transparent background */
-  background-image: linear-gradient(to bottom, transparent var(--navbar-height-sticky), #fff var(--navbar-height-sticky));
-  padding: calc(var(--navbar-height) + 0.4rem) 1rem 0.1rem 1rem;
-  margin-top: calc(-1 * var(--navbar-height) - 0.4rem + 1.6rem);
+  background-image: linear-gradient(to bottom, transparent var(--sticky-heading-offset-fix), #fff var(--sticky-heading-offset-fix));
+  padding: calc(var(--sticky-heading-offset) + 0.4rem) 1rem 0.1rem 1rem;
+  margin-top: calc(-1 * var(--sticky-heading-offset) - 0.4rem + 1.6rem);
 
   /* method B: transparent top border */
   /*
   background-color: #fff;
-  border-top: var(--navbar-height) solid transparent;
+  border-top: var(--sticky-heading-offset) solid transparent;
   padding: 0.4rem 1rem 0.1rem 1rem;
-  margin-top: calc(-1 * var(--navbar-height) - 0.4rem + 1.6rem);
+  margin-top: calc(-1 * var(--sticky-heading-offset) - 0.4rem + 1.6rem);
   background-clip: padding-box;
   */
 }
